# bluebell

./: .gitignore  404.html  AGENTS.md  Cargo.toml  MANIFEST.in  Makefile  README.md  RELEASING.md  akn.peg  hier.py  hier.txt  hierarchicalStructure.peg  hierarchicalStructure.py  index.html  mkdocs.yml  parse.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml  statement.txt  test.py
.github/workflows/: docs.yml  publish.yml  test.yml  update-bluebell-monaco.yml
advanced/: index.html
bluebell/: __init__.py  akn.peg  akn.py  akn_text.xsl  cli.py  parser.py  types.py  xml.py  xml_names.py
bluebell-rust/: AGENTS.md  Cargo.toml  README.md
bluebell-rust/schemas/: README.md
bluebell-rust/src/: eid.rs  grammar.pest  lib.rs  main.rs  parser.rs  preprocess.rs  unparse.rs  xml.rs
bluebell-rust/tests/: fixtures.rs  python_xml_parity.rs  schema_fixtures.rs
cli/: index.html
crates/: README.md
crates/bluebell-cli/: Cargo.toml
crates/bluebell-cli/src/: main.rs
crates/bluebell-core/: Cargo.toml
crates/bluebell-core/src/: eid.rs  frbr.rs  grammar.pest  lib.rs  parser.rs  preprocess.rs  xml.rs
crates/bluebell-core/tests/: fixtures.rs  python_xml_parity.rs  schema_fixtures.rs  support.rs
crates/bluebell-python/: Cargo.toml  pyproject.toml
crates/bluebell-python/src/: lib.rs
crates/bluebell-wasm/: Cargo.toml  README.md
crates/bluebell-wasm/src/: lib.rs
crates/bluebell-wasm/tests/: wasm.rs
css/: extra.css
demo/: index.html
docs/: advanced.md  cli.md  demo.md  grammar.md  index.md  library.md  troubleshooting.md
docs/css/: extra.css
docs/js/: demo.js
grammar/: index.html
js/: demo.js  pretty_print.xsl
migration/: README.md  constitution-bluebell-comparison-pretty.xml  constitution-bluebell.xml  constitution-slaw-comparison-pretty.xml  constitution-slaw-for-bluebell.txt  constitution-slaw-pretty.xml  constitution-slaw.xml  for-comparison.xslt  migrate.py  slaw-to-bluebell.xslt
search/: search_index.json
tests/: __init__.py  support.py  test_attachments.py  test_blocks.py  test_bullet_list.py  test_containers.py  test_eids.py  test_escapes.py  test_fuzzing.py  test_hier.py  test_inline.py  test_judgment.py  test_main_doctypes.py  test_parser.py  test_round_trip.py  test_rtl.py  test_subflows.py  test_tables.py  test_work_components.py
tests/rewrite_eids/: bad_eids.xml  empty_doc_in.xml  empty_doc_out.xml  missing_eids.xml  out.xml  unchanged_1.xml  unchanged_2.xml
tests/rewrite_work_components/: basic_in.xml  basic_out.xml
tests/roundtrip/: act-attributes.txt  act-empty.txt  act-escapes.txt  act-footnotes.txt  act.txt  attribs.xml  debate-report.txt  eids.txt  eids_basic.xml  eids_debatereport.xml  eids_edge.xml  escapes.xml  hansard.txt  judgment-attachments.txt  judgment.txt  nested_attachments.txt  nested_attachments.xml
troubleshooting/: index.html
