[build-system]
requires = ["setuptools", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bluebell-akn"
description = "Transforms text to and from Akoma Ntoso"
authors = [
  { name="Laws.Africa", email="info@laws.africa" },
]
license = {text = "LGPLv3+"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Markup :: XML",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "cobalt>=9.0.0",
    "lxml>=3.4.1",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/laws-africa/bluebell"
"Bug Tracker" = "https://github.com/laws-africa/bluebell/issues"

[project.optional-dependencies]
test = ["flake8"]

[project.scripts]
bluebell = "bluebell.cli:main"

[tool.setuptools.packages.find]
include = ["bluebell"]  # package names should match these glob patterns (["*"] by default)
exclude = ["tests*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "bluebell.__version__"}

