[build-system]
requires = ["setuptools", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bluebell-akn"
description = "Transforms text to and from Akoma Ntoso"
authors = [
  { name="Laws.Africa", email="info@laws.africa" },
]
license = {text = "LGPLv3+"}
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Markup :: XML",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "cobalt>=9.0.0",
    "lxml>=3.4.1",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/laws-africa/bluebell"
"Bug Tracker" = "https://github.com/laws-africa/bluebell/issues"

# the one set of extra dependencies for development, testing and CI
[project.optional-dependencies]
dev = ["build", "flake8", "maturin", "poethepoet"]

[project.scripts]
bluebell = "bluebell.cli:main"

[tool.setuptools.packages.find]
include = ["bluebell"]  # package names should match these glob patterns (["*"] by default)
exclude = ["tests*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "bluebell.__version__"}

# Developer commands: run `poe` (pip install -e '.[dev]') to list them.
# Tasks run from the repository root regardless of the current directory.
[tool.poe.tasks]

[tool.poe.tasks.test]
help = "Run all test suites (Python, Rust, WASM)"
sequence = ["test-py", "test-rust", "test-wasm"]

[tool.poe.tasks.test-py]
help = "Run the Python test suite"
cmd = "python -m unittest discover -s tests -t ."

[tool.poe.tasks.test-rust]
help = "Run the Rust test suite (parity tests need this venv's python)"
cmd = "cargo test"

[tool.poe.tasks.test-wasm]
help = "Run the WASM binding tests under Node"
cwd = "crates/bluebell-wasm"
cmd = "wasm-pack test --node"

[tool.poe.tasks.test-parity]
help = "Slow large-document Rust/Python parity test (~1-2 min)"
cmd = "cargo test -p bluebell-core --test python_xml_parity income_tax_xml_roundtrip_parse_matches_python -- --ignored --nocapture"

[tool.poe.tasks.lint]
help = "Lint the Python package with flake8"
cmd = "flake8 bluebell"

[tool.poe.tasks.ext]
help = "Build and install the Rust extension into the active venv"
cwd = "crates/bluebell-python"
cmd = "maturin develop --release"

[tool.poe.tasks.ext-remove]
help = "Uninstall the Rust extension (reverts to the pure-Python parser)"
cmd = "pip uninstall -y bluebell-akn-rs"

[tool.poe.tasks.build-wasm]
help = "Build the @lawsafrica/bluebell-wasm npm package into crates/bluebell-wasm/pkg"
cwd = "crates/bluebell-wasm"
cmd = "wasm-pack build --release --target bundler --scope lawsafrica"

[tool.poe.tasks.bench]
help = "Benchmark Rust vs Python parse on the income tax act"
cmd = "cargo run --release -p bluebell-rs -- bench-income-tax crates/bluebell-core/tests/fixtures/income-tax.xml"
