[package]
name = "bluebell-rs"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "bluebell-rs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
bluebell-core = { path = "../bluebell-core" }
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
